force-app/main/default/objects/Due_Diligence_History__c/Due_Diligence_History__c.object-meta.xml
<CustomObject>
    <label>Due Diligence History</label>
    <nameField>
        <displayFormat>DD-{000000}</displayFormat>
        <label>Due Diligence History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>