force-app/main/default/objects/Due_Diligence_History__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Non responsive</fullName>
            </value>
            <value>
                <fullName>DD not met</fullName>
            </value>
            <value>
                <fullName>DD not provided</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>