force-app/main/default/objects/Due_Diligence_History__c/fields/Due_Diligence_Duration__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Duration__c</fullName>
    <label>DD Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>