force-app/main/default/objects/Due_Diligence_History__c/fields/Due_Diligence_Result__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Result__c</fullName>
    <label>DD Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>