force-app/main/default/objects/Due_Diligence_History__c/fields/Due_Diligence_Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Risk_Factors__c</fullName>
    <label>Risk Factors</label>
    <type>TextArea</type>
</CustomField>