force-app/main/default/objects/Due_Diligence_History__c/fields/Due_Diligence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Start_Date__c</fullName>
    <label>Due Diligence Start Date</label>
    <type>DateTime</type>
</CustomField>