force-app/main/default/objects/Due_Diligence_History__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New registration</fullName>
            </value>
            <value>
                <fullName>Awaiting T&amp;C</fullName>
            </value>
            <value>
                <fullName>Registration Complete</fullName>
            </value>
            <value>
                <fullName>DD in progress</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Citi</fullName>
            </value>
            <value>
                <fullName>Awaiting EFT deposit form</fullName>
            </value>
            <value>
                <fullName>Awaiting Legal</fullName>
            </value>
            <value>
                <fullName>DD Complete</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Periodic review</fullName>
            </value>
            <value>
                <fullName>Re-DD in progress</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>